Добавил второй путь для регистрации, шаблон регистрации и исключения Forbidden, начал писать serializer, во вьюхах создал второй класс для регистрации

--- a/app_effective/small_web/templates/base.html
+++ b/app_effective/small_web/templates/base.html
@@ -4,7 +4,7 @@
     {% load static %}
     <meta charset="UTF-8">
     <title>Доска товаров</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'rose/style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 </head>
 <body>
     <header>
