--- a/app_effective/small_web/static/css/style.css
+++ b/app_effective/small_web/static/css/style.css
@@ -2,7 +2,7 @@ header h1 {
     font-size: 40pt;
     text-transform: uppercase;
     text-align: center;
-    background: url("bg.jpg") left / auto 100% no-repeat;
+    background: url("/static/img/bg.jpg") left / auto 100% no-repeat;
 }
 nav {
     font-size: 16pt;
