Добавил ссылки в шаблоны для удобного перехода по приложению

--- a/app_effective/small_web/templates/base.html
+++ b/app_effective/small_web/templates/base.html
@@ -11,12 +11,12 @@
         <h1>Товары</h1>
     </header>
     <nav>
-        <a href="#">Главная</a>
+        <a href="{% url 'index_page' %}">Главная</a>
         <a href="#">Личный кабинет</a>
         <a href="#">Просмотр товаров</a>
         <a href="#">Вход в систему</a>
         <a href="#">Выход из системы</a>
-        <a href="#">Регистрация</a>
+        <a href="{% url 'signup_page' %}">Регистрация</a>
     </nav>
     <section>
         {% block content %}
