Поменял поле email в модели CustomUsers, убрав unique в ограничеия. Добавил сериализатор чтобы выполнять вход в систему, написал вьюху для входа в систему get/post методы, добавил шаблон для рендеринга. Добавил функцию для проверки пользователя в системе.

--- a/app_effective/small_web/templates/base.html
+++ b/app_effective/small_web/templates/base.html
@@ -14,7 +14,7 @@
         <a href="{% url 'index_page' %}">Главная</a>
         <a href="#">Личный кабинет</a>
         <a href="#">Просмотр товаров</a>
-        <a href="#">Вход в систему</a>
+        <a href="{% url 'signin_page' %}">Вход в систему</a>
         <a href="#">Выход из системы</a>
         <a href="{% url 'signup_page' %}">Регистрация</a>
     </nav>
