--- a/app_effective/small_web/templates/signin.html
+++ b/app_effective/small_web/templates/signin.html
@@ -3,10 +3,13 @@
 
 
 {% block content %}
-<h1>Регистрация</h1>
+<h1>Вход с систему</h1>
+{% if answer %}
+{{ answer }}
+{% endif %}
 <form method="post">
   {% csrf_token %}
   {% render_form serializer template_pack='rest_framework/vertical' %}
-  <input type="submit" value="Добавить">
+  <input type="submit" value="Найти">
 </form>
 {% endblock content %}
