--- a/app_effective/small_web/templates/base.html
+++ b/app_effective/small_web/templates/base.html
@@ -12,7 +12,7 @@
     </header>
     <nav>
         <a href="{% url 'index_page' %}">Главная</a>
-        <a href="#">Личный кабинет</a>
+        <a href="{% url 'account_page' %}">Личный кабинет</a>
         <a href="#">Просмотр товаров</a>
         <a href="{% url 'signin_page' %}">Вход в систему</a>
         <a href="#">Выход из системы</a>
