--- a/app_effective/small_web/templates/account.html
+++ b/app_effective/small_web/templates/account.html
@@ -3,7 +3,7 @@
 {% block content %}
 <h1>KEEP MOVING FORWARD!!!!!</h1>
 {% for i in serializer.data %}
-<p>Имя - {{ i.name }}</p>
+<p><a href="{% url 'change_user' %}">Имя - {{ i.name }}</a></p>
 <p>Почта - {{ i.email }}</p>
 <p>Фамилия - {{ i.surname }}</p>
 {% endfor %}
