Написал DAO для таблицы CustomPermittions, в той же модели добавил метод str для корректного отображения, добавил сериализатор для получения и изменения Permission, добавил шаблон получения и изменения permission, написал api ко всему этому функционалу.

--- a/app_effective/small_web/templates/account.html
+++ b/app_effective/small_web/templates/account.html
@@ -2,6 +2,10 @@
 
 {% block content %}
 <h1>Личный кабинет</h1>
+{% if is_admin %}
+<p><a href="{% url 'permissions_admin' %}">Просмотр и изменение прав</a></p>
+{% endif %}
+<p>Личная информация</p>
 {% for i in serializer.data %}
 <p><a href="{% url 'change_user' user_id=i.id %}">Имя - {{ i.name }}</a></p>
 <p>Почта - {{ i.email }}</p>
