Изменил логику выпуска refresh и access токенов с помощью функции create_jwt, create_access_token, create_refresh_token. Добавил установку в cookie refresh токен и обновление access токена с помощью refresh (set_cookie, checker_auth)

--- a/app_effective/small_web/templates/exceptions/forbidden_page.html
+++ b/app_effective/small_web/templates/exceptions/forbidden_page.html
@@ -3,5 +3,8 @@
 {% block content %}
 
 <h1>У вас нет доступа для просмотра выбранной страницы</h1>
+{% if error %}
+{{ error %}
+{% endif %}
 
 {% endblock content %}
