Убрал лишний контескт в функции вывода шаблона get_forbidden_answer. Перенёс эту функцию в отдельный модуль. Доработал шаблон сообщения о недоступной странице, в сериализаторе CustomPermissionSerializer добавил валидацию к полю access_type.

--- a/app_effective/small_web/templates/exceptions/forbidden_page.html
+++ b/app_effective/small_web/templates/exceptions/forbidden_page.html
@@ -3,8 +3,5 @@
 {% block content %}
 
 <h1>У вас нет доступа для просмотра выбранной страницы</h1>
-{% if error %}
-{{ error %}
-{% endif %}
-
+<p>Необходимо войти в систему</p>
 {% endblock content %}
