Добавил шаблонное выведение сообщения при нарушении уникальности поля Email в models. Убрал лишние ссылки в шаблоне base, добавил API для выполнения logout

--- a/app_effective/small_web/templates/account.html
+++ b/app_effective/small_web/templates/account.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 <h1>Личный кабинет</h1>
+<p><a href="{% url 'logout_page' %}">Выход из системы</a></p>
 {% if is_admin %}
 <p><a href="{% url 'permissions_admin' %}">Просмотр и изменение прав</a></p>
 {% endif %}
