--- a/app_effective/small_web/templates/403.html
+++ b/app_effective/small_web/templates/403.html
@@ -2,5 +2,5 @@
 
 {% block content %}
 
-<h1>У вас нет доступа для просмотра выбранной страницы. Попробуйте войти в систему и повторить запрос</h1>
+<h1>У вас нет доступа для просмотра выбранной страницы</h1>
 {% endblock content %}
